Sec12_Chap138-XXX: optimized code